# NCLPDLB

./: .coverage 2  .coveragerc  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DEPLOY_CHECKLIST.md  GEMINI.md  ISS-005-SOLUTION.md  ISS-006-SOLUTION.md  ISS-007-SOLUTION.md  NCLPDLB_Audit_Report_v2.md  NoChillModeOnline_NCLPDLB_872817.json  PROJECT_INDEX.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  STATUS.md  audit-fixes.patch  bot_output.txt  conftest.py  constraints.txt  cov_cogs.txt  cov_output.txt  coverage_output.txt  data_pipeline.py  discord_commands.csv  full_cov_output.txt  harness.toml  issues.md  nclpdlb-sync-and-cleanup.ps1  pdlb-finalize-and-cleanup.ps1  pdlb-push-and-cleanup.ps1  pokemon_showdown_workflow.txt  privacypolicy.md  pyproject.toml  pyrightconfig.json  (+9 more)
pokemon-pipeline/: .env.example  .gitignore  Dockerfile  README.md  celery_app.py  config.py  docker-compose.yml  pyproject.toml
pokemon-pipeline/alembic/: env.py
pokemon-pipeline/api/: dependencies.py  main.py  schemas.py
pokemon-pipeline/bot/: api_client.py  config.py  main.py
pokemon-pipeline/docs/: google_cloud_setup.md  ollama_finetune.md
pokemon-pipeline/ml/: classifier.py  embeddings.py  export.py  ollama_finetune.py  similarity.py
pokemon-pipeline/models/: db.py  seed.py  seed_creators.py
pokemon-pipeline/scripts/: run_backfill.py
pokemon-pipeline/tasks/: utils.py
pokemon-pipeline/tests/: conftest.py  test_api.py  test_deduplicator.py  test_e2e.py  test_limitless_ingest.py  test_parser.py  test_tagger.py
(+6303 files in other folders)
