[project]
name = "pokemon-pipeline"
version = "0.1.0"
description = "Production-grade, live-updating Pokemon competitive team import and analysis pipeline."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "flower>=2.0",
    "redis>=5.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "playwright>=1.48",
    "tenacity>=9.0",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.6",
    "pokepastes-scraper>=0.2",
    "sentence-transformers>=3.2",
    "scikit-learn>=1.5",
    "torch>=2.5",
    "pgvector>=0.3",
    "aiohttp>=3.10",
    "discord.py>=2.4",
    "joblib>=1.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=tasks --cov=api --cov=models --cov-report=html --cov-report=term-missing"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests touching DB/HTTP mocks",
    "e2e: full pipeline smoke tests",
    "slow: excluded from default fast run",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
